@@ -20,19 +20,19 @@ __END__
 
 =head1 NAME
 
-npg_library_merging_runnner
+npg_library_merging_runner
 
 =head1 SYNOPSIS
 
 =head1 DESCRIPTION
 
-Starts library merging pipeline for studies.
+Runs the per study npg_library_merge_generator at regular intervals for studies under consideration (set in config).
 
 =head1 USAGE
 
 npg_library_merging_runner  [--config_path /path/to/config/dir] --dry_run --sleep_time 21600
 
-Configuration file library_merge.yml example:
+Configuration file npg_seq_melt example:
 
 -analysis_dir: /path/to/study/subdir/location
 -software: /software/npg/$datestamp                #optional
