@@ -1,5 +1,6 @@
 ChangeLog 
 ==========
+- renaming of generator and merging scripts with npg_ prefix and dropping .pl suffix
 - daemon modules, script and tests
 - LSF resources merged into initial bsub command
 - qc sub-directory and bam_flagstats.json added
